	PR bootstrap/62300 	* function.c (assign_parm_setup_reg): Remove erroneous checked 	cast to rtx_insn * on result of gen_extend_insn in favor of 	introducing a new local rtx "pat".

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@214714 138bc75d-0d04-0410-961f-82ee72b054a4